fixing background image not covering the whole page issue and fixing the hamburger button not displaying Flashcards and Quizzes issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body {
   background-image: URL("https://images.unsplash.com/photo-1528164344705-47542687000d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1192&q=80");
   background-repeat: no-repeat;
